--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <!-- HEADER -->
     <header class="header">
         <img src="images/logo.png" alt="Tic Track" class="logo">
-        <a href="installers/TicTrack.dmg" class="btn" download="TicTrack.dmg">
-            <i class="bi bi-arrow-down-circle"></i> Download
+        <a href="mailto:mertens.valery@gmail.com" class="btn">
+            <i class="bi bi-envelope"></i> Contact Support
         </a>
     </header>
 
@@ -27,13 +27,23 @@
                 <i class="bi bi-arrow-down-circle"></i> Download Tic Track
             </a>
             <a href="#" class="btn btn-secondary">
-                <i class="bi bi-play-circle-fill"></i> Watch a demo
+                <i class="bi bi-play-circle-fill"></i> Installation process
             </a>
+        </div>
+
+        <!-- MODAL -->
+        <div id="download-modal" class="modal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <h2>Thank you for downloading Tic Track!</h2>
+                <p>Your download should start automatically. If not, <a href="installers/TicTrack.dmg" download="TicTrack.dmg">click here</a>.</p>
+                <p>Need help installing? Watch our installation video or contact the support team.</p>
+            </div>
         </div>
         
         <!-- GRANDE IMAGE -->
          <div class="hero-image">
-            <img src="images/home_page.png" alt="Dashboard Tic Track">
+            <img src="images/kanban.png" alt="Dashboard Tic Track">
          </div>
     </section>
 
@@ -49,7 +59,7 @@
             </div>
             <div class="feature-item">
                 <i class="bi bi-bookmark"></i>
-                <h3>Category & Labels</h3>
+                <h3>Categories & Labels</h3>
                 <p>Create categories and associate labels to your tasks.</p>
             </div>
             <div class="feature-item">
@@ -73,8 +83,8 @@
         <div class="screenshot-item">
             <img src="images/labels.png" alt="Tic Track Screenshot 1">
             <div class="screenshot-text">
-                <h3>Labels creation</h3>
-                <p>Create labels to categorize your tasks and make them easier to find.</p>
+                <h3>Categories & Labels</h3>
+                <p>Create labels inside categories to organise your tasks efficiently.</p>
             </div>
         </div>
 
@@ -145,8 +155,8 @@
         <div class="footer-content">
             <p>&copy; 2025 <strong>Tic Track</strong> - All rights reserved</p>
             <div class="footer-links">
-                <a href="https://github.com/ton-projet" target="_blank" class="footer-link">GitHub Project</a>
-                <a href="https://github.com/ton-github-personnel" target="_blank" class="footer-link">GitHub Personal</a>
+                <a href="https://github.com/Frivox1/tic_track" target="_blank" class="footer-link">GitHub Project</a>
+                <a href="https://github.com/Frivox1" target="_blank" class="footer-link">GitHub Personal</a>
             </div>
         </div>
     </footer>
