--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
         <h1 class="title">Tic Track</h1>
         <p class="subtitle">Organise your tasks and stay productive with Tic Track.</p>
         <div class="hero-buttons">
-            <a href="installers/TicTrack.dmg" class="btn" download="TicTrack.dmg">
+            <a href="install.html" class="btn">
                 <i class="bi bi-arrow-down-circle"></i> Download Tic Track
             </a>
+            <!-- <a href="installers/TicTrack.dmg" class="btn" download="TicTrack.dmg">
+                <i class="bi bi-arrow-down-circle"></i> Download Tic Track
+            </a> -->
             <a href="#" class="btn btn-secondary">
                 <i class="bi bi-play-circle-fill"></i> Installation process
             </a>
