installation page v2 (animations)

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <span class="close">&times;</span>
                 <h2>Thank you for downloading Tic Track!</h2>
                 <p>Your download should start automatically. If not, <a href="installers/TicTrack.dmg" download="TicTrack.dmg">click here</a>.</p>
-                <p>Need help installing? Watch our installation video or contact the support team.</p>
+                <p>Need help installing? Watch our installation video or contact me.</p>
             </div>
         </div>
         
@@ -53,7 +53,7 @@
     <!-- FONCTIONNALITÉS -->
     <section class="features">
         <h2>Why choose Tic Track?</h2>
-        <p>Our application offers a wide range of features to help you stay organised and productive.</p>
+        <p>My application offers a wide range of features to help you stay organised and productive.</p>
         <div class="features-grid">
             <div class="feature-item">
                 <i class="bi bi-kanban"></i>
@@ -80,7 +80,7 @@
 
     <!-- SCREENSHOTS SECTION -->
     <section class="screenshots">
-        <h2>Our App in Action</h2>
+        <h2>The App in Action</h2>
         <p>Take a look at some screenshots of Tic Track in action!</p>
 
         <div class="screenshot-item">
@@ -124,7 +124,7 @@
                 <h3>How do I download Tic Track?</h3>
             </button>
             <div class="faq-content">
-                <p>Simply click the "Download" button on the homepage to get Tic Track dmg file. Make sure to follow the installation instructions. If you have any issues, please contact our support team.</p>
+                <p>Simply click the "Download" button on the homepage to get Tic Track dmg file. Make sure to follow the installation instructions. If you have any issues, please contact me.</p>
             </div>
         </div>
         <div class="faq-item">
@@ -132,7 +132,7 @@
                 <h3>Why does I have a security warning when I try to open Tic Track?</h3>
             </button>
             <div class="faq-content">
-                <p>Since we are a small company, we do not have an Apple Developer account. Therefore, you will need to go to your Applications folder, right-click on Tic Track and select "Open". Then, you will be able to click on "Open" in the security warning. If you have any issues, please contact our support team.</p>
+                <p>Since I'm a student developer, I do not have an Apple Developer account. Therefore, you will need to go to your Applications folder, right-click on Tic Track and select "Open". Then, you will be able to click on "Open" in the security warning. If you have any issues, please contact me.</p>
             </div>
         </div>
         <div class="faq-item">
@@ -140,7 +140,7 @@
                 <h3>How secure is my data on Tic Track?</h3>
             </button>
             <div class="faq-content">
-                <p>Every data are stored <u>locally</u> on your device and are not shared with any third-party services. We take your privacy very seriously.</p>
+                <p>Every data are stored <u>locally</u> on your device and are not shared with any third-party services. I take your privacy very seriously.</p>
             </div>
         </div>
         <div class="faq-item">
