--- a/install.html
+++ b/install.html
@@ -23,7 +23,7 @@
     <!-- INSTALLATION SECTION -->
     <section class="install">
         <h1 class="title">Install Tic Track</h1>
-        <p class="subtitle">Choose your operating system to download Tic Track</p>
+        <p class="subtitle">Choose your operating system to download Tic Track.</p>
         
         <div class="install-buttons">
             <a href="installers/TicTrack.dmg" class="btn">
