add modals when download button is clicked

--- a/install.html
+++ b/install.html
@@ -37,6 +37,15 @@
             </a>
         </div>
 
+         <!-- MODAL -->
+         <div id="download-modal" class="modal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <h2>Thank you for downloading Tic Track!</h2>
+                <p>Need help installing? Watch our installation video or contact me.</p>
+            </div>
+        </div>
+
         <div class="install-instructions">
             <h2>Installation Instructions</h2>
             <p>Follow the steps below to install Tic Track on your system.</p>
@@ -67,5 +76,7 @@
         <a href="index.html" class="footer-link">Back to Home</a>
     </footer>
 
+
+    <script src="scripts.js"></script>
 </body>
 </html>
