windaube + linux pas dispo

--- a/install.html
+++ b/install.html
@@ -27,15 +27,15 @@
         
         <div class="install-buttons">
             <a href="installers/TicTrack.dmg" class="btn">
-                <i class="bi bi-apple"></i> macOS
+              <i class="bi bi-apple"></i> macOS
             </a>
-            <a href="installers/TicTrack.exe" class="btn">
-                <i class="bi bi-windows"></i> Windows
+            <a href="#" class="btn disabled">
+              <i class="bi bi-windows"></i> Windows
             </a>
-            <a href="installers/TicTrack.AppImage" class="btn">
-                <i class="bi bi-ubuntu"></i> Linux
+            <a href="#" class="btn disabled">
+              <i class="bi bi-ubuntu"></i> Linux
             </a>
-        </div>
+          </div>
 
          <!-- MODAL -->
          <div id="download-modal" class="modal">
@@ -53,19 +53,21 @@
             <div class="instruction-item">
                 <i class="bi bi-apple"></i>
                 <h3>macOS</h3>
-                <p>Download the `.dmg` file, open it, and drag Tic Track into your Applications folder. Warning : macOS may block the installation. Make sure to watch <a href="" style="color: #f44336;">this video</a> to install correctly.</p>
+                <p>Download the `.dmg` file, open it and drag Tic Track into your Applications folder. Warning : macOS may block the installation. Make sure to watch <a href="" style="color: #f44336;">this video</a> to install correctly.</p>
             </div>
             
             <div class="instruction-item">
                 <i class="bi bi-windows"></i>
                 <h3>Windows</h3>
-                <p>Download the `.exe` file and double-click to start the installation.</p>
+                <p>Unfortunately, the Windows version is not available yet. Please check back later.</p>
+                <!-- <p>Download the `.exe` file and double-click to start the installation.</p> -->
             </div>
 
             <div class="instruction-item">
                 <i class="bi bi-ubuntu"></i>
                 <h3>Linux</h3>
-                <p>Download the `.AppImage` file, make it executable, and run it.</p>
+                <p>Unfortunately, the Linux version is not available yet. Please check back later.</p>
+                <!-- <p>Download the `.AppImage` file, make it executable, and run it.</p> -->
             </div>
         </div>
     </section>
